objects/Life_and_Disability__c.object
<CustomObject>
    <fields>
        <fullName>Original_L_D_Complete_Date__c</fullName>
        <formula>IF(AND(
Implementation_Tracking_ID__r.SBC_Approved__c, 
Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c, 
Implementation_Tracking_ID__r.InterPlan_Approved__c
), TODAY() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original L&amp;D Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(Owner:User.LastName!=null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pend_Date_In__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pend Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pend_Date_Out__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pend Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos; , LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_L_D__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_SME_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending SME Review Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <formula>CASE(MOD( Life_and_Disability_Check_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  Life_and_Disability_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Families</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Line Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <description>This field is being added to support the Group Load functionality through Customer Master.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Quote ID(s) from SRQ to be sent to Customer Master.</inlineHelpText>
        <label>Quote ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <formula>HYPERLINK( Implementation_Tracking_ID__r.Implementation_Record_ID__r.QuoteId , Implementation_Tracking_ID__r.Implementation_Record_ID__r.Quote.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Form_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Registration Form Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Form_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Registration Form Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Time__c</fullName>
        <formula>Registration_Form_Sent__c  -  EDI_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reissue_Certificates__c</fullName>
        <label>Reissue Certificates?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Approvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME Approvals</label>
        <referenceTo>SME_Approvals__c</referenceTo>
        <relationshipLabel>Life and Disabilities</relationshipLabel>
        <relationshipName>Life_and_Disabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_Audit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent to Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <description>This value is being stamped from the Account&apos;s Situs State Field.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Implementation_Type__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Specialty_Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Structure Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Structure_Time__c</fullName>
        <formula>Structure_Sent__c  -  Conversion_Setup_Complete__c</formula>
        <label>Structure Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Enrollment</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Rate Guarantee - no action needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_L_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support L&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Life &amp; Disability Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Updated from the Process Builder- Life &amp; Disability Pending Correction Time</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum of &quot;Time To Pend&quot; and &quot;Time To Approve&quot;</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Testing__c</fullName>
        <formula>Moved_to_Prod__c  -  First_Test_File_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Testing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Processing_Time__c</fullName>
        <formula>Registration_Time__c  +  Structure_Time__c  +  Time_in_Testing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Difference Between The Dates Of Previous Department&apos;s &quot;Approved?&quot; Checkbox Was checked And Date When The Current SME Record&apos;s Stage Is Changed To &quot;03 Pending Correction&quot; To &quot;04 Approved&quot; Or &quot;05 Declined&quot;</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_L_D_Complete_Date__c	 - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c - Original_L_D_Complete_Date__c )/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell__c</fullName>
        <label>Upsell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Life and Disability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Life_and_Disability_Key_Account</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group_Size__c</field>
            <operation>equals</operation>
            <value>51 - 99</value>
        </filters>
        <label>All Life and Disability - Key Account</label>
    </listViews>
    <listViews>
        <fullName>Assigned_LD</fullName>
        <columns>Implementation_Tracking_ID__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sub_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOwnerQueue__c</field>
            <operation>equals</operation>
        </filters>
        <label>Assigned LD</label>
    </listViews>
    <listViews>
        <fullName>L_D_Audit</fullName>
        <columns>NAME</columns>
        <columns>Case_Install_Owner__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>L_D_Case_Install_Status__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>L_D_Received__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Total_Time__c</columns>
        <columns>Bravo_Indicator__c</columns>
        <columns>Claim_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_to_Audit__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>L_D_Case_Install_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>L&amp;D Audit</label>
    </listViews>
    <listViews>
        <fullName>L_D_Case_Install</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Case_Install_Owner__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>L_D_Case_Install_Status__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Case_Install_Received_date__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Total_Time__c</columns>
        <columns>Bravo_Indicator__c</columns>
        <columns>Claim_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L_D_Case_Install_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Case_Install_Complete__c</field>
            <operation>equals</operation>
        </filters>
        <label>L&amp;D Case Install</label>
    </listViews>
    <listViews>
        <fullName>L_D_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Contract_Owner__c</columns>
        <columns>Cert_Start_Date__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Impacted_Products__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Custom_Language_Indicator__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Total_Time__c</columns>
        <columns>Claim_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L_D_Membership_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Contract_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>L&amp;D Contracts</label>
    </listViews>
    <listViews>
        <fullName>L_D_EDI</fullName>
        <columns>NAME</columns>
        <columns>EDI_Status__c</columns>
        <columns>EDI_Owner__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>L_D_File_Type__c</columns>
        <columns>Total_Time__c</columns>
        <columns>EDI_Processing_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Initial_L_D_Enrollment_Type__c</field>
            <operation>equals</operation>
            <value>EDI</value>
        </filters>
        <filters>
            <field>Case_Install_Complete__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>EDI_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>L&amp;D EDI</label>
    </listViews>
    <listViews>
        <fullName>L_D_Local_Life_and_Disability</fullName>
        <filterScope>Queue</filterScope>
        <label>L&amp;D - Local</label>
        <queue>L_D_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L_D_Membership</fullName>
        <columns>NAME</columns>
        <columns>Membership_Owner__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>L_D_Membership_Status__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Membership_Received__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Total_Time__c</columns>
        <columns>Bravo_Indicator__c</columns>
        <columns>Claim_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L_D_Membership_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Case_Install_Complete__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>L&amp;D Membership</label>
    </listViews>
    <listViews>
        <fullName>L_D_Ready_for_Cert</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Cert_Team_Received_Date__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Upsell__c</columns>
        <columns>Impacted_Products__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Owner__c</columns>
        <columns>Sub_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_for_Cert__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Cert_Sent_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>L&amp;D Ready for Cert</label>
    </listViews>
    <listViews>
        <fullName>L_D_by_Claim_System</fullName>
        <columns>NAME</columns>
        <columns>Claim_System__c</columns>
        <columns>L_D_Product_Sold__c</columns>
        <columns>Is_L_D_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>L_D_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>L&amp;D by Claim System</label>
    </listViews>
    <listViews>
        <fullName>L_D_by_Group_Number</fullName>
        <columns>NAME</columns>
        <columns>Group_Number__c</columns>
        <columns>L_D_Product_Sold__c</columns>
        <columns>Is_L_D_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>L_D_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>L&amp;D by Group Number</label>
    </listViews>
    <listViews>
        <fullName>L_D_by_Implementation_Case_Status</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Case_Status__c</columns>
        <columns>L_D_Product_Sold__c</columns>
        <columns>Is_L_D_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>L_D_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>L&amp;D by Implementation Case Status</label>
    </listViews>
    <listViews>
        <fullName>L_D_by_Implementation_Type</fullName>
        <columns>NAME</columns>
        <columns>L_D_Product_Sold__c</columns>
        <columns>Is_L_D_DDS_Detail_Applicable__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>L_D_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>L&amp;D by Implementation Type</label>
    </listViews>
    <listViews>
        <fullName>L_D_by_Opportunity_Type</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>L_D_Product_Sold__c</columns>
        <columns>Is_L_D_DDS_Detail_Applicable__c</columns>
        <columns>Stage__c</columns>
        <columns>Contract_Code__c</columns>
        <columns>Product_Line_Code__c</columns>
        <columns>L_D_Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Group_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>L&amp;D by Opportunity Type</label>
    </listViews>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Life and Disability Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life and Disabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cert_Date_Validation</fullName>
        <active>true</active>
        <description>Ensures cert sent date should always be greater or equal to cert received date.</description>
        <errorConditionFormula>(Cert_Sent_Date__c &lt; Cert_Team_Received_Date__c ) || ( ISNULL( Cert_Team_Received_Date__c ) &amp;&amp; !ISNULL( Cert_Sent_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Cert_Sent_Date__c</errorDisplayField>
        <errorMessage>Cert Sent Date cannot be before Cert Team Received Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Language_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Custom_Language_Indicator__c,&quot;Yes&quot;)
&amp;&amp;ISBLANK(Custom_Language__c),true,false)</errorConditionFormula>
        <errorDisplayField>Custom_Language__c</errorDisplayField>
        <errorMessage>Custom Language is Required if “Custom Language Indicator” is marked as “Yes”</errorMessage>
    </validationRules>
</CustomObject>